--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-11-30  Sven Neumann  <sven@gimp.org>
 
+	* index.htrw: changed icons in news entries.
+
+2004-11-30  Sven Neumann  <sven@gimp.org>
+
 	* admin/gimp-web-urls: added contest page.
 
 	* index.htrw
