fiddled with the layout.
2004-11-30  Sven Neumann  <sven@gimp.org>

	* about/splash/contest/index.htrw: fiddled with the layout.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-11-30  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/contest/index.htrw: fiddled with the layout.
+
 	* index.htrw: changed icons in news entries.
 
 2004-11-30  Sven Neumann  <sven@gimp.org>
