--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-29  Helvetix Victorinox  <helvetix@gimp.org>
+
+	* Cut over to the new (old) news system.
+
 2004-11-30  Sven Neumann  <sven@gimp.org>
 
 	* about/splash/contest/index.htrw: fiddled with the layout.
