reverted Helvetix' change to the front-page. Better to have manually
2004-11-30  Sven Neumann  <sven@gimp.org>

	* index.htrw: reverted Helvetix' change to the front-page. Better
	to have manually edited news with links and the correct icons than
	to have a news system with broken content that noone has access to.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-11-30  Sven Neumann  <sven@gimp.org>
+
+	* index.htrw: reverted Helvetix' change to the front-page. Better
+	to have manually edited news with links and the correct icons than
+	to have a news system with broken content that noone has access to.
+
 2004-11-30  Niklas M <scizzo@gimp.org>
 
 	* about/splash/contest/index.htrw: Changed some styles and moved the
