--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,11 @@
 	Some visual changes in the indicator of where the currently
 	display page is versus the total of all gallery images.
 
+	Code cleanup and refactoring.  Gallery edit now displays 12 images per page.
+
+	* programmatic/admin/wgo-admin.cpp:
+	Added new definitions for CSS attributes for the gallery.
+
 2004-12-03  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* programmatic/admin/contest/gallery-edit.py (display_gallery): 
