--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-06  Dave Neary <bolsh@gimp.org>
+
+	* index.htrw: Changed news entry to include links to sponsors 
+	sites.
+
 2004-12-05  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* programmatic/admin/contest/gallery-edit.py (display_gallery): 
