fixed typo in Changelog

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* about/splash/contest/index.htrw: Add a link to Mukund's voting
 	site together with a disclaimer that the result there not
-	necessary will reflect the final result.
+	necessarily will reflect the final result.
 
 2004-12-06  Dave Neary <bolsh@gimp.org>
 
