--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,15 @@
 2004-12-18  Sven Neumann  <sven@gimp.org>
 
-	* docs/index.htrw: link to man-pages.
+	* docs/index.htrw
+	* macintosh/index.htrw
+	* unix/index.htrw
+	* windows/index.htrw: added links to /docs/ on all platform-specific
+	pages and collected common links in the platform-neutral section.
+	
+2004-12-18  Sven Neumann  <sven@gimp.org>
 
+	* docs/index.htrw: link to man-pages.
+	
 	* admin/gimp-web-urls
 	* man/gimp-remote.html
 	* man/gimp.html
