--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-12-18  Sven Neumann  <sven@gimp.org>
 
+	* docs/index.htrw: converted back to ISO-8859-1, should really be
+	UTF-8.
+
+2004-12-18  Sven Neumann  <sven@gimp.org>
+
 	* admin/gimp-web-urls
 	* docs/index.htrw: updated available languages for the help.
 
