--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-12-18  Sven Neumann  <sven@gimp.org>
 
+	* about/splash/stable.htrw: show the new splash for 2.2.
+
 	* about/splash/contest/index.htrw: integrated the jury's
 	announcement into the splash contest page.
 
