--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-12-18  Sven Neumann  <sven@gimp.org>
 
+	* admin/gimp-web-urls: fixed URL of new splash screen.
+
 	* about/splash/stable.htrw: show the new splash for 2.2.
 
 	* about/splash/contest/index.htrw: integrated the jury's
