a PNG version of an icon we used on the old wgo page. I would like to be
2004-12-19  Sven Neumann  <sven@gimp.org>

	* images/wilber_reading.png: a PNG version of an icon we used on
	the old wgo page. I would like to be able to use this as news icon.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-19  Sven Neumann  <sven@gimp.org>
+
+	* images/wilber_reading.png: a PNG version of an icon we used on
+	the old wgo page. I would like to be able to use this as news icon.
+
 2004-12-18  Sven Neumann  <sven@gimp.org>
 
 	* man/gimp-remote.html
