--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-12-19  Niklas M  <scizzo@gimp.org>
+
+	* unix/index.htrw: Removed 2.0 requirements. Made 2.2 stable.
+	* source/index.htrw: Removed 2.0 requirements. Made 2.2 stable.
+	* downloads/install_help.htrw: Removed 2.0 requirements. Made 2.2
+	stable.
+
 2004-12-19  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: udpated for GIMP 2.2.0.
