--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-19  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.2.html: some minor tweaks.
+
 2004-12-19  Niklas M <scizzo@gimp.org>
 
 	* release-notes/gimp-2.2.html: Added file and directory with 
