--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-01-04  Sven Neumann  <sven@gimp.org>
+
+	* windows/index.htrw: rephrased download links for Windows
+	binaries, based on suggestions from Tigert. Removed links to
+	commercial packages; they should promote their products
+	themselves.
+
 2005-01-03  Niklas M <scizzo@gimp.org>
 
 	* docs/batch_mode.htrw: Added new file for batch mode usage.
