updated for 2.2.2 release.
2005-01-10  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.2.2 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-10  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.2 release.
+
 2005-01-08  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Basic_Batch/index.htrw: changed syntax of examples so
