--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-14  Simon Budig  <simon@gimp.org>
+
+	* unix/howtos/gimp-midi.htrw: added to describe the GIMPs Midi
+	controller.
+
 2005-01-10  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.2 release.
