--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-01-18  Raphaël Quinet  <raphael@gimp.org>
 
+	* release-notes/.cvsignore
+	* tutorials/Basic_Batch/.cvsignore: Created by "make cvsignore".
+
 	* books/index.htrw
 	* books/guerilla_guide_to_great_graphics_with_the_gimp.png
 	* admin/gimp-web-urls: Added information about the book "Guerilla
