updated ChangeLog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-01-26  Dave Neary  <bolsh@gimp.org>
 
+	* books/a_la_sos_gimp.png:
+	* admin/gimp-web-urls:
 	* books/index.htrw: Added Cédric Gemy's free book on the 
 	GIMP - in French - which he has recently updated for the GIMP
 	2.2.
