--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Sven Neumann  <sven@gimp.org>
+
+	* unix/index.htrw: updated links to binaries for Fedora and SuSE.
+
 2005-01-26  Dave Neary  <bolsh@gimp.org>
 
 	* books/a_la_sos_gimp.png:
